tests/paczka1/fuzzy1/50114436.err
Error in line 1: VHYoOhH S141 65,7
Error in line 8: 84rKbx S141 8,38
Error in line 7: S817 S241 89,3
Error in line 5: 84rKbx A361 32,1
Error in line 17: 84rKbx S141 8,8
Error in line 23: 84rKbx S141 66,2
Error in line 29: l2riUis S241 71,7
